@@ -33,6 +33,13 @@ AC_DEFUN([X_AC_LIBSYSFS],
     AC_MSG_ERROR("Unable to find working libsysfs library!")
   fi
 
+  AC_COMPILE_IFELSE(
+	  [AC_LANG_SOURCE([[#include <sysfs/libsysfs.h>]],
+		              [[struct dlist *l = syssf_open_directory_list("/sys")]])],
+	  [AC_DEFINE([LIBSYSFS_2_0], [1], [Define to 1 if libsysfs-2.0])],
+	  []
+  )
+
   LIBS=$saveLIBS;
   AC_SUBST([LIBSYSFS_LIBS])
 ])
